<resources>
    <string name="app_name">Khojo</string>
    <string name="delete_all">Delete All</string>
    <string name="home_page">Home Page</string>
    <string name="http_www_google_com">http://www.google.com/</string>
    <string name="edit">Edit</string>
    <string name="http">http://</string>
    <string name="enter_new_url_with_http">Enter new URL with http</string>
    <string name="save">Save</string>
    <string name="view_all">View All</string>
    <string name="show_more">Show more</string>
    <string name="history">History</string>
    <string name="developer">Developer</string>
    <string name="erase">Erase</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="dev_details">Khojo app is Mini project submitted at Madan Mohan Malaviya University of Technology, Gorakhpur. \n\n \nDepartment : ITCA \nBranch : MCA \nSession : 2021-22 \nRoll No. : 2020104039</string>
    <string name="omendra_singh_gakkhar">Omendra Singh Gakkhar</string>
</resources>