<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5sp"
    tools:context=".Settings">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:text="@string/home_page"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/hpRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/oldHp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|fill_horizontal"
            android:text="@string/http_www_google_com"
            android:textSize="20sp"
            android:textStyle="italic" />

        <ImageButton
            android:id="@+id/hpEdit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/edit"
            android:minWidth="50dp"
            app:srcCompat="@android:drawable/ic_menu_edit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/hpEditRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/newHp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|fill_horizontal"
            android:inputType="textUri"
            android:text="@string/http"
            android:hint="@string/enter_new_url_with_http"
            android:textSize="20sp"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/hpSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/save"
            android:minWidth="50dp"
            app:srcCompat="@android:drawable/ic_menu_save" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/historyRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/history"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|fill_horizontal"
            android:text="@string/history"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/viewHistory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:text="@string/view_all"
            android:textAllCaps="false"
            android:textColor="#1437E4"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/dev"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginTop="25sp"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/developer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|fill_horizontal"
            android:text="@string/developer"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/viewDeveloper"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:text="@string/show_more"
            android:textAllCaps="false"
            android:textColor="#1437E4"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>


</LinearLayout>