<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/path"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|fill_horizontal"
            android:hint="@string/enter_new_url_with_http"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:minWidth="100dp"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/del"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/erase"
            android:minWidth="50dp"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/share"
            android:minWidth="50dp"
            app:srcCompat="@android:drawable/ic_menu_share" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/settings"
            android:minWidth="50dp"
            app:srcCompat="@android:drawable/ic_menu_manage" />

    </LinearLayout>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>